--- a/GlucoMan.Mobile/GlucoMan.Mobile/InjectionsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/InjectionsPage.xaml
@@ -2,10 +2,97 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Mobile.InjectionsPage"
-            Title="Insuline injections">
+            Title="Insulin injections">
     <!--Pages can be added as references or inline-->
     <ContentPage Title="Data">
-        
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="2" Text="Id" XAlign="Center" YAlign="Center"/>
+            <Label Grid.Row="0" Grid.Column="0" Text="Actual insulin" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="0" Grid.Column="1" Text="Calculated Insulin" XAlign="Center" YAlign="End"/>
+
+            <Entry Grid.Row="1" Grid.Column="2" x:Name="txtIdInjection" BackgroundColor="White" 
+                       FontSize="Medium" HorizontalTextAlignment="End" IsReadOnly="true"/>
+            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtInsulinActual" 
+                   Keyboard="Numeric" BackgroundColor="PaleGreen" HorizontalTextAlignment="End"
+                   FontSize="Medium" />
+            <Entry Grid.Row="1" Grid.Column="1" x:Name="txtInsulinCalculated" 
+                   Keyboard="Numeric" BackgroundColor="White" HorizontalTextAlignment="End"
+                   FontSize="Medium" />
+            <Button Grid.Row="1" Grid.Column="3" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
+
+            <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="Injection date and time"  XAlign="Center" YAlign="End"/>
+
+            <DatePicker Grid.Row="3" Grid.Column="0" x:Name="dtpInjectionDate" 
+                        BackgroundColor="PaleGreen" FontSize="Small" Format="yyyy-MM-dd" 
+                        HorizontalOptions="Center" />
+            <TimePicker Grid.Row="3" Grid.Column="1" x:Name="dtpInjectionTime" 
+                        BackgroundColor="PaleGreen" FontSize="Small" Format="HH:mm:ss" 
+                        HorizontalOptions="Center" />
+            <Button Grid.Row="3" Grid.Column="2" Text="Now" x:Name="btnNow" Clicked="btnNow_Click"></Button>
+            <Grid Grid.Row="3" Grid.Column="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddInjection" Clicked="btnAddInjection_Click"></Button>
+                <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveInjection" Clicked="btnRemoveInjection_Click"></Button>
+            </Grid>
+
+            <StackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+                <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
+                    <CheckBox.Margin>
+                        <OnPlatform x:TypeArguments="Thickness">
+                            <On Platform="iOS" Value="0,-10,0,0" />
+                            <On Platform="Android, WinPhone, Windows" Value="0,-5,0,0" />
+                        </OnPlatform>
+                    </CheckBox.Margin>
+                </CheckBox>
+                <Label VerticalTextAlignment="Center" VerticalOptions="Start" Text="Save with Now as time">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer>
+
+                        </TapGestureRecognizer>
+                    </Label.GestureRecognizers>
+                </Label>
+            </StackLayout>
+
+            <ListView Grid.Row="5" Grid.ColumnSpan="4" x:Name="gridInjections" ItemsSource="{Binding}"
+                      ItemSelected="OnGridSelectionAsync" >
+                <!-- description of data to be shown, in a DataTemplate -->
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                <Grid Margin="10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="18"/>
+                                    </Grid.RowDefinitions>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Timestamp.DateTime}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding InsulinValue.Text}"/>
+                                </Grid>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </ContentPage>
     <ContentPage Title="Front" />
     <ContentPage Title="Back" />
