--- a/GlucoMan.Mobile/GlucoMan.Mobile/MainPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MainPage.xaml
@@ -2,9 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Mobile.MainPage">
-    <StackLayout>
+    <StackLayout Padding="5,0,5,0">
         <Frame BackgroundColor="#2196F3" Padding="0" CornerRadius="0" Margin="0,0,0,0">
-            <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
+            <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" 
+                   TextColor="White" FontSize="30"/>
         </Frame>
         <Button x:Name="btnGlucoseMeasurement" Text="Glucose" Clicked="btnGlucoseMeasurement_Clicked"
                 Margin="15,0,15,0"></Button>
@@ -18,8 +19,8 @@
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
                 Margin="15,0,15,0"></Button>
-        <Button x:Name="btnInjections" Text="Injection sites" 
-                Clicked="btnInjections_Clicked" IsEnabled="False" Margin="15,0,15,0"></Button>
+        <Button x:Name="btnInjections" Text="Injections" 
+                Clicked="btnInjections_Clicked" IsEnabled="True" Margin="15,0,15,0"></Button>
         <Button x:Name="btnFoodToHitTargetCarbs" Text="Food to reach target carbs" 
                 Clicked="btnFoodToHitTargetCarbs_Clicked"
                 Margin="15,0,15,0"></Button>
