--- a/GlucoMan.Mobile/GlucoMan.Mobile/MainPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Mobile.MainPage">
-    <StackLayout Padding="5,0,5,0">
+    <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="0" CornerRadius="0" Margin="0,0,0,0">
             <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" 
                    TextColor="White" FontSize="30"/>
