v.0.7.3.0 Some fixes and refactorings. Added button to go to glucose measurement in InsulinCalc Page and Form. Added management of storage in Meal of codes of GlucoseRecord, InsulinInjection, added IdInsulinInjection to Meals Table in database.

--- a/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
@@ -49,7 +49,7 @@
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
                     x:Name="txtDescription" BackgroundColor="White"
                     Keyboard="Text" TextChanged="txtDescription_TextChanged"
-                    FontSize="Medium" HorizontalTextAlignment="End"/>
+                    FontSize="Medium" HorizontalTextAlignment="Start"/>
 
             <Label Grid.Row="5" Grid.Column="0" Text="CHO [g]%" XAlign="Center" YAlign="End"/>
 
