--- a/GlucoMan.Mobile/GlucoMan.Mobile/MealsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MealsPage.xaml
@@ -11,6 +11,7 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
@@ -78,12 +79,15 @@
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveMeal" Clicked="btnRemoveMeal_ClickAsync"></Button>
             </Grid>
 
-            <Button Grid.Row="5" Grid.Column="0" Text="Save" x:Name="btnSave" Clicked="btnSaveMeal_ClickAsync"></Button>
-            <Button Grid.Row="5" Grid.Column="1" Text="Now" x:Name="btnNowBegin" Clicked="btnNowBegin_Click"></Button>
-            <Button Grid.Row="5" Grid.Column="2" Text="Defaults" x:Name="btnDefaults" Clicked="btnDefault_Click"></Button>
-            <Button Grid.Row="5" Grid.Column="3" Text="Details" x:Name="btnShowThisMeal" Clicked="btnShowThisMeal_ClickAsync"></Button>
+            <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="White" 
+                   FontSize="Medium" HorizontalTextAlignment="Start" IsReadOnly="false"/>
             
-            <StackLayout Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Button Grid.Row="6" Grid.Column="0" Text="Save" x:Name="btnSave" Clicked="btnSaveMeal_ClickAsync"></Button>
+            <Button Grid.Row="6" Grid.Column="1" Text="Now" x:Name="btnNowBegin" Clicked="btnNowBegin_Click"></Button>
+            <Button Grid.Row="6" Grid.Column="2" Text="Defaults" x:Name="btnDefaults" Clicked="btnDefault_Click"></Button>
+            <Button Grid.Row="6" Grid.Column="3" Text="Details" x:Name="btnShowThisMeal" Clicked="btnShowThisMeal_ClickAsync"></Button>
+
+            <StackLayout Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
                 <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
@@ -101,10 +105,10 @@
                 </Label>
             </StackLayout>
             
-            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Date and Time" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="Date and Time" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" XAlign="Center" YAlign="End"/>
             
-            <ListView Grid.Row="8" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
+            <ListView Grid.Row="9" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
                       ItemSelected="OnGridSelectionAsync" >
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
