v. 0.7.3.1 Added reading of the whole database from external folder (in both UIs). Little progressis on importint parts of database. Added the NuGet of SimMetrics.Net, for similarity comparisons, but not used yet. Some code in WinForms: added frmImport, but not finished (neither management, nor UI).

--- a/GlucoMan.Mobile/GlucoMan.Mobile/MiscellaneousFunctionsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/MiscellaneousFunctionsPage.xaml
@@ -39,9 +39,13 @@
                     Text="Copy files" Margin="100,0,100,0"
                     x:Name="btnCopyDatabase" Clicked="btnCopyProgramsFiles_Click" />
             
-            <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" 
-                    Text="Import data" Margin="100,0,100,0"
+            <Button Grid.Row="5" Grid.Column="0"
+                    Text="Import data"
                     x:Name="btnImport" Clicked="btnImport_Click" />
+            <Button Grid.Row="5" Grid.Column="1" 
+                    Text="Read database" 
+                    BackgroundColor="Red" TextColor="Yellow"
+                    x:Name="btnReadDatabase" Clicked="btnReadDatabase_Click" />
             
             <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" 
                     Text="Stop application" Margin="100,0,100,0"
